<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.dev.multiplebackstackexample.ui.messages_stack.details.MessageDetailsFragment">

    <TextView
        android:id="@+id/message_details_tv_from_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message_details_tv_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/message_details_right_barrier"
        app:layout_constraintTop_toTopOf="@+id/message_details_tv_from_title"
        tools:text="Name" />

    <TextView
        android:id="@+id/message_details_tv_subject_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_details_tv_from" />

    <TextView
        android:id="@+id/message_details_tv_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/message_details_right_barrier"
        app:layout_constraintTop_toTopOf="@+id/message_details_tv_subject_title"
        tools:text="Some subject from person" />

    <TextView
        android:id="@+id/message_details_tv_body_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/body"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_details_tv_subject_title" />

    <TextView
        android:id="@+id/message_details_tv_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/message_details_right_barrier"
        app:layout_constraintTop_toTopOf="@+id/message_details_tv_body_title"
        tools:text="Some message with body shdghhsdksdghhkdhkj dahfjkdahfjkashfjkad fhjkahfjkfakjfhjkasjkadfjkafhkafh adfkafhkahfkadfhkajdf" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/message_details_right_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="message_details_tv_from_title, message_details_tv_subject_title" />

</androidx.constraintlayout.widget.ConstraintLayout>